[gd_scene load_steps=39 format=3 uid="uid://dlysvvr1aprdc"]

[ext_resource type="Script" uid="uid://cxaj2txgrot0c" path="res://_GUI/HUD/game_hud/game_hud.gd" id="1_2v08g"]
[ext_resource type="PackedScene" uid="uid://cug7reenm11sr" path="res://_GUI/HUD/hud_layout.tscn" id="2_hfobc"]
[ext_resource type="PackedScene" uid="uid://c38lsr2lu1i4t" path="res://_GUI/HUD/game_hud/components/buy_button.tscn" id="7_iwlbn"]
[ext_resource type="Texture2D" uid="uid://b0xh3lcnrqboa" path="res://common/icons/ui_buttons/structure_gate.png" id="8_en8hq"]
[ext_resource type="Texture2D" uid="uid://c1d8lhog071sm" path="res://common/icons/ui_buttons/card_lift.png" id="9_iwlbn"]
[ext_resource type="Texture2D" uid="uid://do5fpysxkbwj2" path="res://common/icons/ui_buttons/arrow_diagonal.png" id="10_t7dor"]
[ext_resource type="Texture2D" uid="uid://cfgp3vuehr7tn" path="res://common/icons/ui_buttons/pouch_remove.svg" id="12_cohbh"]
[ext_resource type="Texture2D" uid="uid://begn511dpycyv" path="res://common/icons/ui_buttons/hourglass.png" id="12_iwlbn"]
[ext_resource type="Script" uid="uid://bvsalc57dvu50" path="res://_GUI/HUD/game_hud/components/ui_button.gd" id="13_hhadb"]
[ext_resource type="PackedScene" uid="uid://b17g86bbvfydc" path="res://_GUI/HUD/game_hud/components/roll_screen.tscn" id="13_ryev7"]
[ext_resource type="Script" uid="uid://dk3jt8p0fjgid" path="res://_GUI/HUD/game_hud/state_machine/inactive_state.gd" id="14_8trcm"]
[ext_resource type="Texture2D" uid="uid://bxgah4kd476pu" path="res://common/icons/ui_buttons/pawn_reverse.svg" id="14_vvj38"]
[ext_resource type="Script" uid="uid://ca8wyyyfxe0ef" path="res://_GUI/HUD/game_hud/state_machine/need_roll_state.gd" id="15_hheuk"]
[ext_resource type="Script" uid="uid://c3rxa57l0dfcw" path="res://_GUI/HUD/game_hud/state_machine/active_state.gd" id="16_p1mox"]
[ext_resource type="Script" uid="uid://dnbu8tbbhv6e8" path="res://_GUI/HUD/game_hud/state_machine/setup_state.gd" id="18_3o7oo"]
[ext_resource type="Script" uid="uid://dd2nneu3quv1y" path="res://custom/scripts/state_machine.gd" id="19_hfobc"]
[ext_resource type="Script" uid="uid://by0qk8rv8l4ul" path="res://_GUI/HUD/game_hud/state_machine/rober_move_state.gd" id="19_qo7ve"]
[ext_resource type="PackedScene" uid="uid://b0nur1ie7735w" path="res://_2D/action_card/knight_card/knight_unused.tscn" id="20_aa2f2"]
[ext_resource type="PackedScene" uid="uid://cnkvy5asx2jbj" path="res://_2D/action_card/point_card/point_card_unused.tscn" id="21_8ewad"]
[ext_resource type="PackedScene" uid="uid://dg2efbkrkqw3k" path="res://_2D/action_card/monopoly_card/monopoly_unused.tscn" id="24_alt8r"]
[ext_resource type="Script" uid="uid://xgfkdmpxtrmw" path="res://_GUI/HUD/game_hud/state_machine/supply_trade_state.gd" id="24_hhadb"]
[ext_resource type="PackedScene" uid="uid://cckx0gxh74awr" path="res://_2D/action_card/free_roads_card/free_roads_card.tscn" id="24_tjr3c"]
[ext_resource type="Script" uid="uid://c2tw2dxgt2fuv" path="res://_GUI/HUD/game_hud/state_machine/cut_resources_state.gd" id="27_ibqqg"]
[ext_resource type="PackedScene" uid="uid://dkbj14fu5sllm" path="res://_2D/action_card/knight_card/knight_used.tscn" id="29_3rj33"]
[ext_resource type="PackedScene" uid="uid://bsujydwfouxdm" path="res://_2D/action_card/point_card/point_card_used.tscn" id="31_3ldut"]
[ext_resource type="PackedScene" uid="uid://btwcse1pwgy8l" path="res://_2D/action_card/year_of_plenty_card/year_of_plenty.tscn" id="33_k2n6s"]
[ext_resource type="Script" uid="uid://wkqxsy42lr3a" path="res://_GUI/HUD/game_hud/state_machine/year_of_plenty_state.gd" id="35_3td1n"]
[ext_resource type="Script" uid="uid://d3jd3b1emllj1" path="res://_GUI/HUD/game_hud/state_machine/free_roads_state.gd" id="36_j7v1d"]
[ext_resource type="Script" uid="uid://ce2niffrhnt1o" path="res://_GUI/HUD/game_hud/state_machine/monopoly_state.gd" id="37_sqd25"]
[ext_resource type="Script" uid="uid://d1ai8ehn8kh1u" path="res://_GUI/HUD/game_hud/state_machine/player_trade_state.gd" id="38_bmphe"]

[sub_resource type="Gradient" id="Gradient_hfobc"]
offsets = PackedFloat32Array(0, 0.647727, 1)
colors = PackedColorArray(0, 0.955698, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_56vj1"]
gradient = SubResource("Gradient_hfobc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhadb"]
bg_color = Color(1.28509e-05, 0.87516, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvj38"]
bg_color = Color(1.28509e-05, 0.87516, 0, 1)

[sub_resource type="Gradient" id="Gradient_y8wuv"]
colors = PackedColorArray(0.44098, 0.440979, 0.440979, 0.784314, 0.44098, 0.440979, 0.440979, 0.784314)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hfobc"]
gradient = SubResource("Gradient_y8wuv")
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_56vj1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o4t6f"]
gradient = SubResource("Gradient_56vj1")
fill_from = Vector2(1, 1)

[node name="GameHUD" type="Control" node_paths=PackedStringArray("turn_progress_bar", "roll_button", "end_turn_button", "player_card_parent", "turn_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2v08g")
timer_gradient = SubResource("GradientTexture1D_56vj1")
turn_progress_bar = NodePath("TurnProgress")
roll_button = NodePath("RollButton")
end_turn_button = NodePath("EndTurnButton")
player_card_parent = NodePath("PlayerCards")
turn_label = NodePath("CurrentTurn")

[node name="hud_layout" parent="." instance=ExtResource("2_hfobc")]
layout_mode = 1

[node name="CurrentTurn" type="Label" parent="."]
layout_mode = 0
offset_left = 930.0
offset_top = 538.0
offset_right = 1036.0
offset_bottom = 558.0
text = "Current Turn: "

[node name="PlayerCards" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
alignment = 1

[node name="UIButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.98
anchor_right = 0.02
anchor_bottom = 0.98
offset_left = -15.04
offset_top = -59.04
offset_right = 304.96
offset_bottom = 4.95996
grow_vertical = 0
alignment = 1

[node name="BuySettlement" parent="UIButtons" node_paths=PackedStringArray("confirm") instance=ExtResource("7_iwlbn")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon_alignment = 1
confirm = NodePath("../../Confirm")

[node name="BuyCastle" parent="UIButtons" node_paths=PackedStringArray("confirm") instance=ExtResource("7_iwlbn")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("8_en8hq")
icon_alignment = 1
type = 1
confirm = NodePath("../../Confirm")

[node name="BuyRoad" parent="UIButtons" node_paths=PackedStringArray("confirm") instance=ExtResource("7_iwlbn")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("10_t7dor")
icon_alignment = 1
type = 2
confirm = NodePath("../../Confirm")

[node name="BuyCard" parent="UIButtons" node_paths=PackedStringArray("confirm") instance=ExtResource("7_iwlbn")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("9_iwlbn")
icon_alignment = 1
type = 3
confirm = NodePath("../../Confirm")

[node name="SupplyTrade" type="Button" parent="UIButtons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/pressed = SubResource("StyleBoxFlat_hhadb")
toggle_mode = true
icon = ExtResource("12_cohbh")
icon_alignment = 1
expand_icon = true
script = ExtResource("13_hhadb")
metadata/_custom_type_script = "uid://bvsalc57dvu50"

[node name="PlayerTrade" type="Button" parent="UIButtons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/pressed = SubResource("StyleBoxFlat_vvj38")
toggle_mode = true
icon = ExtResource("14_vvj38")
icon_alignment = 1
expand_icon = true
script = ExtResource("13_hhadb")
metadata/_custom_type_script = "uid://bvsalc57dvu50"

[node name="RollButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -64.0
offset_right = 40.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 30
disabled = true
text = "ROLL"

[node name="EndTurnButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -83.0
offset_right = -15.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("12_iwlbn")
icon_alignment = 1

[node name="TurnProgress" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
grow_horizontal = 0
grow_vertical = 2
max_value = 60.0
step = 0.01
value = 60.0
fill_mode = 2
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_hfobc")
texture_progress = SubResource("GradientTexture2D_o4t6f")
tint_under = Color(1, 1, 1, 0.427451)

[node name="RollScreen" parent="." instance=ExtResource("13_ryev7")]
layout_mode = 1

[node name="Confirm" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = 532.0
offset_right = 362.0
offset_bottom = 563.0
text = "Buy Action Card"

[node name="KnightUnused" parent="." instance=ExtResource("20_aa2f2")]
position = Vector2(728, 608)

[node name="PointUnused" parent="." instance=ExtResource("21_8ewad")]
position = Vector2(776, 608)

[node name="MonopolyUnused" parent="." instance=ExtResource("24_alt8r")]
position = Vector2(824, 608)

[node name="YearOfPlenty" parent="." instance=ExtResource("33_k2n6s")]
position = Vector2(872, 608)

[node name="FreeRoadsCard" parent="." instance=ExtResource("24_tjr3c")]
position = Vector2(920, 608)

[node name="KnightUsed" parent="." instance=ExtResource("29_3rj33")]
position = Vector2(408, 608)

[node name="PointCardUsed" parent="." instance=ExtResource("31_3ldut")]
position = Vector2(462, 608)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("19_hfobc")
metadata/_custom_type_script = "uid://dd2nneu3quv1y"

[node name="InactiveState" type="Node" parent="StateMachine"]
script = ExtResource("14_8trcm")

[node name="NeedRollState" type="Node" parent="StateMachine" node_paths=PackedStringArray("roll_screen")]
script = ExtResource("15_hheuk")
roll_screen = NodePath("../../RollScreen")
roll_color = Color(1, 0.72549, 0, 1)
turn_color = Color(8.56727e-06, 0.805724, 3.85046e-07, 1)
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="ActiveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("supply_trade", "action_card_confirm", "player_trade", "knight_card", "point_card", "monopoly_card", "year_of_plenty", "free_roads")]
script = ExtResource("16_p1mox")
supply_trade = NodePath("../../UIButtons/SupplyTrade")
action_card_confirm = NodePath("../../Confirm")
player_trade = NodePath("../../UIButtons/PlayerTrade")
knight_card = NodePath("../../KnightUnused")
point_card = NodePath("../../PointUnused")
monopoly_card = NodePath("../../MonopolyUnused")
year_of_plenty = NodePath("../../YearOfPlenty")
free_roads = NodePath("../../FreeRoadsCard")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="SetupState" type="Node" parent="StateMachine"]
script = ExtResource("18_3o7oo")

[node name="RobberMoveState" type="Node" parent="StateMachine"]
script = ExtResource("19_qo7ve")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="BankTradeState" type="Node" parent="StateMachine" node_paths=PackedStringArray("supply_button")]
script = ExtResource("24_hhadb")
supply_button = NodePath("../../UIButtons/SupplyTrade")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="CutResourcesState" type="Node" parent="StateMachine"]
script = ExtResource("27_ibqqg")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="YearOfPlentyState" type="Node" parent="StateMachine"]
script = ExtResource("35_3td1n")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="FreeRoadsState" type="Node" parent="StateMachine"]
script = ExtResource("36_j7v1d")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="MonopolyState" type="Node" parent="StateMachine"]
script = ExtResource("37_sqd25")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[node name="PlayerTradeState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_trade")]
script = ExtResource("38_bmphe")
player_trade = NodePath("../../UIButtons/PlayerTrade")
metadata/_custom_type_script = "uid://b4n8p8i631us2"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="RollButton" to="StateMachine/NeedRollState" method="_on_roll_button_pressed"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]

[editable path="UIButtons/BuySettlement"]
[editable path="UIButtons/BuyCastle"]
[editable path="UIButtons/BuyRoad"]
[editable path="UIButtons/BuyCard"]
